--- a/ckan/public/base/scss/_forms.scss
+++ b/ckan/public/base/scss/_forms.scss
@@ -768,7 +768,7 @@ select[data-module="autocomplete"] {
     .btn-remove-url {
         position: absolute;
         margin-right: 0;
-        margin-top: 2px;
+        margin-top: 11px;
         top: $grid-gutter-width;
         right: math.div($grid-gutter-width, 6);
         padding: 0 12px;
